# nomad-resource-explorer

./: .gitignore  CMakeLists.txt  README.md  TODO  aboutbox.cpp  aboutbox.h  aboutbox.ui  aliens.cpp  aliens.h  audio.cpp  audio.h  conversationtext.cpp  conversationtext.h  dat_extractor.c  datlibrary.cpp  datlibrary.h  dattable.cpp  dattable.h  decompressor.c  enums.h  facts.cpp  facts.h  file_structs.h  fullscreenimages.cpp  fullscreenimages.h  gametext.cpp  gametext.h  glshipviewerwidget.cpp  glshipviewerwidget.h  imageconverter.cpp  imageconverter.h  invobject.cpp  invobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  missions.cpp  missions.h  nomad-resource-explorer.pro  (+20 more)
icon/: nre-icon.xcf
nomad-resource-explorer/: aliens.cpp  aliens.h  audio.cpp  audio.h  datlibrary.cpp  datlibrary.h  enums.h  imageconverter.cpp  imageconverter.h  inventory.cpp  inventory.h  invobject.cpp  invobject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nomad-resource-explorer.pro  palette.cpp  palette.h  placeclasses.cpp  placeclasses.h  places.cpp  places.h  shipclasses.cpp  shipclasses.h  shipinventory.h  ships.h
src/: aliens.h  audio.cpp  datlibrary.cpp  datlibrary.h  facts.cpp  facts.h  fullscreenimages.cpp  fullscreenimages.h  gametext.cpp  gametext.h  glshipviewerwidget.cpp  glshipviewerwidget.h  imageconverter.cpp  invobject.cpp  invobject.h  mainwindow.cpp  mainwindow.h  missions.cpp  missions.h  palette.h  placeclasses.cpp  places.cpp  shipclasses.h  shipmodeldata.cpp  ships.cpp  ships.h  tablenumberitem.h
standalone_utils/: dat_builder.c  dat_extractor.c
